# Sticker-Hub

./: .gitignore  CHANGELOG.md  LICENSE  README.md  StickerHub.spec  main.py  pyproject.toml
.github/workflows/: pr-safety-checks.yml  release-version.yml  release-windows-asset.yml
scripts/: build_windows.py  migrate_to_sqlite.py
sticker_hub/: __init__.py  app.py  paths.py  theme.py  version.py
sticker_hub/models/: __init__.py  sticker_models.py
sticker_hub/services/: __init__.py  cache_service.py  downloader.py  import_resolver.py  provider_shared.py  provider_sigstick.py  provider_stickerly.py  update_install_service.py  update_service.py
sticker_hub/ui/: main_window.py  sticker_card.py  sticker_grid.py
sticker_hub/utils/: __init__.py  image_utils.py
sticker_hub/workers/: __init__.py  download_worker.py
tests/: smoke_test.py
