[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sticker-hub"
authors = [
    { name = "Edward Tapado"}
]
version = "1.7.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pillow>=10.0",
    "pyinstaller>=6.19.0",
    "pyside6>=6.6",
    "python-semantic-release>=10.5.3",
    "requests>=2.31",
]

[tool.setuptools.packages.find]
include = ["sticker_hub*"]
exclude = ["assets*", "build*", "dist*"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
commit_parser = "conventional"
tag_format = "v{version}"
major_on_zero = true

[tool.semantic_release.branches.main]
match = "^main$"
prerelease = false

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.publish]
upload_to_vcs_release = true
dist_glob_patterns = ["dist/*.zip"]
